fix: improve jest config

--- a/run_once_before_install-base-packages.sh.tmpl
+++ b/run_once_before_install-base-packages.sh.tmpl
@@ -5,8 +5,10 @@ echo "Installing Nix..."
 curl -L https://nixos.org/nix/install | sh
 fi
 
+{{ if eq .chezmoi.os "darwin" -}}
 if ! command -v brew &> /dev/null
 then
 echo "Installing Homebrew..."
 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 fi
+{{ end -}}
