--- a/run_onchange_darwin-install-packages.sh.tmpl
+++ b/run_onchange_darwin-install-packages.sh.tmpl
@@ -5,11 +5,19 @@ brew bundle --no-lock --file=/dev/stdin <<EOF
 {{ range .packages.darwin.brews -}}
 brew {{ . | quote }}
 {{ end -}}
+
 {{ range .packages.darwin.brews_with_args -}}
 brew {{ .name | quote }}, args: [{{ .args | join "," | quote }}]
 {{ end -}}
+
 {{ range .packages.darwin.casks -}}
 cask {{ . | quote }}
 {{ end -}}
+
 EOF
 {{ end -}}
+
+{{ range .packages.nix -}}
+nix-env -iA {{ . | quote }}
+{{ end -}}
+
