fix: email as data, not function

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,6 +1,6 @@
 [user]
 	name = Mika Andrianarijaona
-	email = {{ email | quote }}
+	email = {{ .email | quote }}
 [init]
 	defaultBranch = main
 [core]
