fix: update busbud conf

--- a/dot_config/fish/conf.d/busbud.fish.tmpl
+++ b/dot_config/fish/conf.d/busbud.fish.tmpl
@@ -7,3 +7,4 @@ set -gx NAPI_PREVIEW_TOKEN $BUSBUD_TOKEN_PREVIEW
 set -gx NAPI_PROD_TOKEN $BUSBUD_TOKEN_PROD
 fish_add_path -g ~/.yarn/bin/
 fish_add_path ~/Workspace/integrations/_tools/bbint/
+fish_add_path ~/Workspace/integrations/_tools/gisterator/
