--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -5,3 +5,5 @@
 	defaultBranch = main
 [core]
 	excludesfile = {{ .chezmoi.homeDir }}/.gitignore_global
+[url "git@github.com:"]
+       insteadOf = https://github.com/
