--- a/dot_config/fish/conf.d/busbud.fish.tmpl
+++ b/dot_config/fish/conf.d/busbud.fish.tmpl
@@ -6,6 +6,7 @@ set -gx BUSBUD_TOKEN_PREVIEW {{ (bitwardenFields "item" "napi-preview.busbud.com
 set -gx BUSBUD_TOKEN_PROD {{ (bitwardenFields "item" "napi.busbud.com").ADMIN_TOKEN.value }}
 set -gx OPEN_EXCHANGE_RATES_KEY {{ (bitwardenFields "item" "openexchangerates.org").API_KEY.value }} 
 set -gx AVANTE_MISTRAL_API_KEY {{ (bitwarden "item" "AVANTE_MISTRAL_API_KEY").notes }} 
+set -gx GEMINI_API_KEY {{ (bitwarden "item" "AVANTE_GEMINI_API_KEY").notes }} 
 set -gx NAPI_PREVIEW_TOKEN $BUSBUD_TOKEN_PREVIEW
 set -gx NAPI_PROD_TOKEN $BUSBUD_TOKEN_PROD
 fish_add_path -g ~/.yarn/bin/
